--- a/resume_style.css
+++ b/resume_style.css
@@ -20,8 +20,9 @@
   float: left;
 }
 #signature {
+  display: inline-block;
+  float: right;
   text-align: left;
-  margin-left: 80%;
 }
 #right {
   margin-top: 30px;
@@ -69,4 +70,13 @@ body {
   margin: 2%;
 }
 @media only screen and (max-width: 768px) {
+  #signature {
+    padding-left: 10px;
+    display: inline-block;
+    float: left;
+    text-align: left;
+  }
+  body {
+    margin: 10px;
+  }
 }
